tests/features/operations/list_operations.out
--- List Operations ---
--- Concatenation ---
[1, 2, 3, 4]
--- Multiplication ---
['a', 'b', 'a', 'b', 'a', 'b']
--- Illegal Operations ---
Caught expected error: Traceback (most recent call last):
  File tests/features/operations/list_operations.sad, line 14, in <program>
        show([1, 2] - [3])
                      ^^^^
IllegalOperationError: Index must be of an integer Number type
[1]
[1, 2, 'hello']
